<resources>
    <string name="app_name">coursesapp</string>
    <string name="welcome">Welcome!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="courses_app">Courses App</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="catalog">Catalog</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="filter">Filter</string>
    <string name="name">Name</string>
    <string name="admin_panel">admin panel</string>
    <string name="enter_name_of_the_course">Enter name of the course</string>
    <string name="enter_description">Enter description</string>
    <string name="add_to_course">Add to course</string>
    <string name="course_name">Course Name</string>
    <string name="course_description">Course Description</string>
    <string name="search">Search</string>
    <string name="add_to_my_courses">Add to my courses</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="users">Users</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>

    <string-array name="coursesThemes">
        <item>Mathematics</item>
        <item>English</item>
        <item>Psychology</item>
        <item>History</item>
        <item>Programming</item>
        <item>Other</item>
    </string-array>

</resources>