<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".fragments.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedwhitebackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="60dp"
        >

        <TextView
            android:id="@+id/text_welcome"
            android:text="@string/welcome"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/text_coursesApp"
            android:text="@string/courses_app"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_welcome"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/text_welcome"
            app:layout_constraintEnd_toEndOf="@id/text_welcome"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_logIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/roundedbutton"
            app:layout_constraintTop_toBottomOf="@id/text_coursesApp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="12dp"
            />


        <TextView
            android:id="@+id/button_SignUp"
            android:text="@string/sign_up"
            android:textColor="@color/teal_200"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/button_logIn"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/main_layout"
            android:layout_marginBottom="24dp"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>